5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1593_1802.log
== TEST (2019-04-01 21:44:04) 
-- CODE:
life = int(input(" pontos de vida iniciais "))
D1 = int(input(" primeiro numero em que parou o dado "))
D2 = int(input(" segundo numero em que parou o dado "))
from math import *
dano = (sqrt(5 * D1) + pi * D2/3)
print( life - dano )
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:45:58) 
-- CODE:
life = int(input(" pontos de vida iniciais "))
D1 = int(input(" primeiro numero em que parou o dado "))
D2 = int(input(" segundo numero em que parou o dado "))
from math import *
dano = (sqrt(5 * D1) + pi * D2/3)
print( life - dano )
-- EXECUTION TIME:
0.154097
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191.48074671532063
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288.23958911776873
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:48:41) 
-- CODE:
life = int(input(" pontos de vida iniciais "))
D1 = int(input(" primeiro numero em que parou o dado "))
D2 = int(input(" segundo numero em que parou o dado "))
from math import *
dano = (math.sqrt(5 * D1) + pi * D2/3)
print( life - dano )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = (math.sqrt(5 * D1) + pi * D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:49:46) 
-- CODE:
from math import *
life = int(input(" pontos de vida iniciais "))
D1 = int(input(" primeiro numero em que parou o dado "))
D2 = int(input(" segundo numero em que parou o dado "))
dano = (sqrt(5 * D1) + pi * D2/3)
print( life - dano )
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
